css/styles.css
html, body{
    padding: 0;
    margin: 0;
    font-family: Arial, sans-serif; 
}

.header{
    padding: 5px;
    margin-bottom: 50px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    background-color: #3368e5;
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.5);
}

.header h1{
    margin-left: -130px;
    color: rgb(255, 254, 254);
}

.header a{
    color: rgb(229, 226, 226);
}

.header button{
    width: 15%;
    height: 22px;
}

.input-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    width: 50%;
    margin: auto;
    column-gap: 5em;
    margin-bottom: 20px;
}

.input-container div{
    display: flex;
    flex-direction: column;
    justify-items: center;
}

#amount-default{
    color: rgb(150, 150, 150);
    margin-top: 0px;
}

.btn-container{
    text-align: center;
    margin-bottom: 30px;
}

table {
    width: 50%;
    max-width: 800px;
    margin: 30px auto;
    border-collapse: collapse;
}

tr:nth-child(even){
    background-color: #f2f2f2;
}

td:not(.btn-remove), th{
    border: 2px solid;
    padding: 5px;
}

.btn-remove{
    padding-left: 10px;
    background-color: white;
}

caption{
    font-weight: bold;
    font-size: 2em;
}

